# sassy-py-test

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  justfile  pyproject.toml  test.txt
.cargo/: config.toml
.github/workflows/: publish-maturin.yml  publish.yml  publish_pypi.yaml
benches/: bench.rs
benchmarks/: Cargo.toml  eval.py
benchmarks/paper/: .gitignore  README.md  plot_throughput.py  plot_tool_bench.py  plot_trace.py  plot_trace_bench.py  results_match_frac_0_k_0.05.csv  results_match_frac_0_k_3.csv  run_tool_bench.py  sassy_edlib_k1_match1.1.csv  sassy_edlib_k1_match1.csv  throughput_stats.py
benchmarks/paper/data/: match_frac_0_k_0.01.csv  match_frac_0_k_20.csv  off_target_bench.txt
benchmarks/src/: main.rs
benchmarks/src/agrep_comparison/: config.toml  runner.rs
benchmarks/src/crispr_bench/: crispr_config.toml  mod.rs  runner.rs  tools.rs
benchmarks/src/edlib_bench/: grid.rs  grid_config.toml  mod.rs  runner.rs  sim_data.rs
benchmarks/src/overhang/: runner.rs
benchmarks/src/profiles/: config.toml  runner.rs
c/: README.md  example.c  sassy.h
evals/: README.md  plot_throughput.py  run_tool_bench.py
evals/data/: match_frac_0_k_0.01.csv  match_frac_0_k_0.05.csv  match_frac_0_k_3.csv  off_target_bench.txt
evals/src/: main.rs
evals/src/edlib_bench/: edlib.rs  grid.rs  runner.rs  sim_data.rs
evals/src/overhang/: config.toml  runner.rs
evals/src/profiles/: runner.rs
examples/: bench.rs  bench_bounded.toml  bench_unbounded.toml  plot.ipynb
python/: README.md  example.py
python/sassy/: __init__.py  example.py
src/: bitpacking.rs  c.rs  crispr.rs  delta_encoding.rs  input_iterator.rs  lib.rs  main.rs  minima.rs  profile.rs  profiles.rs  python.rs  rec_iter.rs  search.rs  trace.rs
src/implementations/: crispr.rs  search.rs
src/profiles/: ascii.rs  dna.rs  iupac.rs  mod.rs  profile.rs  trai_def.rs
