[package]
name = "sassy"
version = "0.1.0"
edition = "2024"
authors = ["Rick Beeloo", "Ragnar Groot Koerkamp"]
description = "Approximate string matching using SIMD"
repository = "https://github.com/RagnarGrootKoerkamp/sassy"
license = "MIT"
keywords = ["pairwise-alignment", "bioinformatics", "library", "SIMD", "ASM", "approximate string matching", "fuzzy searching", "pattern matching", "DNA"]
readme = "README.md"
categories = ["science"]

[lib]
name = "sassy"
crate-type = ["cdylib", "rlib"]

[profile.release]
incremental = true
opt-level = 3
# debug = true

[[bin]]
name = 'sassy'
path = 'bin/main.rs'


[dependencies]
rand = "0.9.0"
pa-types = "1.0.0"
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
num_cpus = "1.16.0"
needletail = "0.6.3"
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.20.0"

[features]
avx512 = []
python = ["pyo3"]
c = []
default = []

[workspace]
members = [
    ".",
    "evals"
]
