[build-system]
requires = ["maturin>=1.0,<2.0", "packaging>=24.2"]
build-backend = "maturin"

[project]
name = "simd-sassy"
version = "0.1.0"
description = "Fast approximate string searching using SIMD"
readme = "python/README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
authors = [
    { name = "Rick beeloo", email = "biobeeloo@gmail.com"},
    { name = "Ragnar Groot Koerkamp", email = "ragnar.grootkoerkamp@gmail.com "}
]

[project.urls]
Homepage = "https://github.com/RagnarGrootKoerkamp/sassy"
Repository = "https://github.com/RagnarGrootKoerkamp/sassy"
Documentation = "https://github.com/RagnarGrootKoerkamp/python/README"

[tool.maturin]
python-source = "python"
module-name = "sassy"
bindings = "pyo3"
features = ["python"] 

[tool.setuptools]
license-files = []