[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
# sassy is already taken in pypi.
name = "sassy-rs"
version = "0.2.2"
description = "Fast approximate string searching using SIMD"
readme = "python/README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Rust",
]
authors = [
    { name = "Rick beeloo", email = "biobeeloo@gmail.com"},
    { name = "Ragnar Groot Koerkamp", email = "ragnar.grootkoerkamp@gmail.com "}
]

[project.urls]
Homepage = "https://github.com/RagnarGrootKoerkamp/sassy"
Repository = "https://github.com/RagnarGrootKoerkamp/sassy"
Documentation = "https://github.com/RagnarGrootKoerkamp/sassy/blob/master/python/README.md"

[tool.maturin]
python-source = "python"
module-name = "sassy"
bindings = "pyo3"
features = ["python"] 


